--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -44,6 +44,14 @@ button:disabled {
   z-index: 10;
 }
 
+.qr-container {
+  position: absolute;
+  bottom: 10;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
 .logo {
   width: 40vw;
   max-width: 580px;
